--- a/index.html
+++ b/index.html
@@ -1,7 +1,40 @@
 <!DOCTYPE html>
-<html>
-    <body>
-        <h1>Hello World</h1>
-        <p>I'm hosted with GitHub Pages.</p>
-    </body>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Portfolio</title>
+  <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+  <header>
+    <h1>Your Name</h1>
+    <p>Aspiring Computer Scientist</p>
+  </header>
+
+  <section id="about">
+    <h2>About Me</h2>
+    <p>Write a brief introduction about yourself, your interests in computer science, and goals.</p>
+  </section>
+
+  <section id="projects">
+    <h2>Projects</h2>
+    <div class="project">
+      <h3>Project Title 1</h3>
+      <p>Description of your project and the technologies used (e.g., Python, JavaScript).</p>
+      <a href="">View Project</a>
+    </div>
+    <div class="project">
+      <h3>Project Title 2</h3>
+      <p>Description of another project. Include code snippets, features, etc.</p>
+      <a href="">View Project</a>
+    </div>
+  </section>
+
+  <section id="contact">
+    <h2>Contact</h2>
+    <p>Email: linngaongshainaung@gmail.com</p>
+    <p>LinkedIn: <a href="">your-profile</a></p>
+  </section>
+</body>
 </html>
