--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
 </head>
 <body>
   <header>
-    <h1>Your Name</h1>
-    <p>Aspiring Computer Scientist</p>
+    <h1>Hello,</h1>
+    <h2>This is Linn Gaong Shain Aung</h2>
+    <p>High School Computer Science Student</p>
   </header>
 
   <section id="about">
