added file for each title

--- a/index.html
+++ b/index.html
@@ -8,10 +8,29 @@
 </head>
 <body>
   <header>
-    <h1>Hello,</h1>
-    <h2>This is Linn Gaong Shain Aung</h2>
-    <p>High School Computer Science Student</p>
+    <nav>
+      <ul>
+        <li><a href="#about">About</a></li>
+        <li><a href="#projects">Projects</a></li>
+        <li><a href="#contact">Contact</a></li>
+      </ul>
+      <div class="icons">
+        <!-- Place for icons like dark mode toggle -->
+      </div>
+    </nav>
   </header>
+
+  <!-- Hero section with the laptop design -->
+  <section class="hero">
+    <div class="laptop">
+      <div class="screen">
+        <span>Hello World</span>
+        <span>Hello World</span>
+        <span>Hello World</span>
+      </div>
+      <!-- You can add more details like a rainbow effect here -->
+    </div>
+  </section>
 
   <section id="about">
     <h2>About Me</h2>
@@ -37,5 +56,6 @@
     <p>Email: linngaongshainaung@gmail.com</p>
     <p>LinkedIn: <a href="">your-profile</a></p>
   </section>
+
 </body>
 </html>
