--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
       <ul>
         <li><a href="#about">About</a></li>
         <li><a href="#projects">Projects</a></li>
-        <li><a href="#contact">Contact</a></li>
+        <li><a href="#achievement">Achievements</a></li>
+        <li><a href="#half-screen">Half Screen Section</a></li>
       </ul>
       <div class="icons">
         <!-- Place for icons like dark mode toggle -->
@@ -28,7 +29,6 @@
         <span>Hello World</span>
         <span>Hello World</span>
       </div>
-      <!-- You can add more details like a rainbow effect here -->
     </div>
   </section>
 
@@ -51,11 +51,23 @@
     </div>
   </section>
 
+  <section id="achievement">
+    <h2>Achievements</h2>
+    <p>List your achievements here.</p>
+  </section>
+
+  <section id="half-screen" class="half-screen">
+    <h2>Half Screen Section</h2>
+    <p>This section takes up half of the screen height.</p>
+  </section>
+
   <section id="contact">
     <h2>Contact</h2>
     <p>Email: linngaongshainaung@gmail.com</p>
     <p>LinkedIn: <a href="">your-profile</a></p>
   </section>
 
+  <!-- Adding a script to handle smooth scrolling -->
+  <script src="scripts.js"></script>
 </body>
 </html>
