--- a/index.html
+++ b/index.html
@@ -15,9 +15,6 @@
         <li><a href="#achievement">Achievements</a></li>
         <li><a href="#half-screen">Half Screen Section</a></li>
       </ul>
-      <div class="icons">
-        <!-- Place for icons like dark mode toggle -->
-      </div>
     </nav>
   </header>
 
@@ -32,6 +29,7 @@
     </div>
   </section>
 
+  <!-- Sections without inline styles -->
   <section id="about">
     <h2>About Me</h2>
     <p>Write a brief introduction about yourself, your interests in computer science, and goals.</p>
