--- a/index.html
+++ b/index.html
@@ -7,65 +7,66 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+
   <header>
     <nav>
       <ul>
         <li><a href="#about">About</a></li>
         <li><a href="#projects">Projects</a></li>
         <li><a href="#achievement">Achievements</a></li>
-        <li><a href="#half-screen">Half Screen Section</a></li>
       </ul>
     </nav>
+    <button id="theme-toggle">🌙</button> <!-- Theme toggle button -->
   </header>
 
-  <!-- Hero section with the laptop design -->
+  <!-- Hero Section -->
   <section class="hero">
-    <div class="laptop">
-      <div class="screen">
-        <span>Hello World</span>
-        <span>Hello World</span>
-        <span>Hello World</span>
+    <h1>Welcome to My Portfolio</h1>
+    <p>Explore my journey in computer science, projects, and achievements</p>
+  </section>
+
+  <!-- About Section -->
+  <section id="about">
+    <div class="box">
+      <h2>About Me</h2>
+      <p>I am passionate about computer science and game development. My journey in programming started with a deep interest in technology and continues to grow with every project I undertake.</p>
+    </div>
+  </section>
+
+  <!-- Projects Section -->
+  <section id="projects">
+    <div class="box">
+      <h2>Projects</h2>
+      <div class="project">
+        <h3>Project Title 1</h3>
+        <p>Description of your project and the technologies used (e.g., Python, JavaScript).</p>
+        <a href="#">View Project</a>
+      </div>
+      <div class="project">
+        <h3>Project Title 2</h3>
+        <p>Description of another project. Include code snippets, features, etc.</p>
+        <a href="#">View Project</a>
       </div>
     </div>
   </section>
 
-  <!-- Sections without inline styles -->
-  <section id="about">
-    <h2>About Me</h2>
-    <p>Write a brief introduction about yourself, your interests in computer science, and goals.</p>
-  </section>
-
-  <section id="projects">
-    <h2>Projects</h2>
-    <div class="project">
-      <h3>Project Title 1</h3>
-      <p>Description of your project and the technologies used (e.g., Python, JavaScript).</p>
-      <a href="">View Project</a>
-    </div>
-    <div class="project">
-      <h3>Project Title 2</h3>
-      <p>Description of another project. Include code snippets, features, etc.</p>
-      <a href="">View Project</a>
-    </div>
-  </section>
-
+  <!-- Achievements Section -->
   <section id="achievement">
-    <h2>Achievements</h2>
-    <p>List your achievements here.</p>
+    <div class="box">
+      <h2>Achievements</h2>
+      <p>List your achievements here. Highlight any academic or professional accomplishments you are proud of.</p>
+    </div>
   </section>
 
-  <section id="half-screen" class="half-screen">
-    <h2>Half Screen Section</h2>
-    <p>This section takes up half of the screen height.</p>
-  </section>
-
+  <!-- Contact Section -->
   <section id="contact">
     <h2>Contact</h2>
     <p>Email: linngaongshainaung@gmail.com</p>
-    <p>LinkedIn: <a href="">your-profile</a></p>
+    <p>LinkedIn: <a href="#">your-profile</a></p>
   </section>
 
-  <!-- Adding a script to handle smooth scrolling -->
+  <!-- Link to external JavaScript file -->
   <script src="scripts.js"></script>
+
 </body>
 </html>
