--- a/index.html
+++ b/index.html
@@ -22,7 +22,12 @@
   <!-- Hero Section -->
   <section class="hero">
     <h1>Welcome to My Portfolio</h1>
-    <p>Explore my journey in computer science, projects, and achievements</p>
+    <!-- Retro computer with typing animation -->
+    <div class="retro-computer">
+      <div class="screen">
+        <span class="text"></span> <!-- Animated typing effect -->
+      </div>
+    </div>
   </section>
 
   <!-- About Section -->
@@ -66,7 +71,6 @@
   </section>
 
   <!-- Link to external JavaScript file -->
-  <script src="scripts.js"></script>
-
+  <script src="scripts.js" defer></script> <!-- External JavaScript -->
 </body>
 </html>
