--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
     <div class="box">
       <h2>Projects</h2>
       <div class="project">
-        <h3>Project Title 1</h3>
+        <h3>TicTacToe-WebGame</h3>
         <p>Description of your project and the technologies used (e.g., Python, JavaScript).</p>
-        <a href="#">View Project</a>
+        <a href="TicTacToe.html">View Project</a>
       </div>
       <div class="project">
         <h3>Project Title 2</h3>
