new computer design

--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
       <div class="screen">
         <span class="text"></span> <!-- Animated typing effect -->
       </div>
+      <div class="base"></div>
+      <div class="floppy-drive"></div>
+      <div class="icon"></div>
     </div>
   </section>
 
